EnergyMeasurements/src/Neocortex_API.py

# generated by 'xml2py'
# flags 'Neocortex_API.xml -o Neocortex_API.py -c -l ./libNeocortex.so'
from ctypes import *

_libraries = {}
_libraries['./libNeocortex.so'] = CDLL('./libNeocortex.so')
STRING = c_char_p


NC_FLOAT32 = 4
NC_UINT32 = 2
NC_FLOAT16 = 3
NC_UINT16 = 1
# ./Neocortex_API.h 24
SMG_init = _libraries['./libNeocortex.so'].SMG_init
SMG_init.restype = c_int
# SMG_init()
SMG_init.argtypes = []
# ./Neocortex_API.h 25
SMG_destroy = _libraries['./libNeocortex.so'].SMG_destroy
SMG_destroy.restype = c_int
# SMG_destroy()
SMG_destroy.argtypes = []
# ./Neocortex_API.h 26
SMG_setVerbosity = _libraries['./libNeocortex.so'].SMG_setVerbosity
SMG_setVerbosity.restype = c_int
# SMG_setVerbosity(level)
SMG_setVerbosity.argtypes = [c_uint]
# ./Neocortex_API.h 27
SMG_getSystemtime = _libraries['./libNeocortex.so'].SMG_getSystemtime
SMG_getSystemtime.restype = c_float
# SMG_getSystemtime()
SMG_getSystemtime.argtypes = []
# ./Neocortex_API.h 29
SMG_createDisplay = _libraries['./libNeocortex.so'].SMG_createDisplay
SMG_createDisplay.restype = c_int
# SMG_createDisplay(width, height, fullscreen)
SMG_createDisplay.argtypes = [c_uint, c_uint, c_int]
# ./Neocortex_API.h 30
SMG_destroyDisplay = _libraries['./libNeocortex.so'].SMG_destroyDisplay
SMG_destroyDisplay.restype = c_int
# SMG_destroyDisplay()
SMG_destroyDisplay.argtypes = []
# ./Neocortex_API.h 31
SMG_renderFrame = _libraries['./libNeocortex.so'].SMG_renderFrame
SMG_renderFrame.restype = c_int
# SMG_renderFrame(delta)
SMG_renderFrame.argtypes = [c_float]
# ./Neocortex_API.h 32
SMG_renderFrameAndSwap = _libraries['./libNeocortex.so'].SMG_renderFrameAndSwap
SMG_renderFrameAndSwap.restype = c_int
# SMG_renderFrameAndSwap(delta)
SMG_renderFrameAndSwap.argtypes = [c_float]
# ./Neocortex_API.h 33
SMG_swapFrame = _libraries['./libNeocortex.so'].SMG_swapFrame
SMG_swapFrame.restype = c_int
# SMG_swapFrame()
SMG_swapFrame.argtypes = []
# ./Neocortex_API.h 35
SMG_createObject = _libraries['./libNeocortex.so'].SMG_createObject
SMG_createObject.restype = c_int
# SMG_createObject()
SMG_createObject.argtypes = []
# ./Neocortex_API.h 36
SMG_destroyObject = _libraries['./libNeocortex.so'].SMG_destroyObject
SMG_destroyObject.restype = c_int
# SMG_destroyObject(object_id)
SMG_destroyObject.argtypes = [c_int]
# ./Neocortex_API.h 38
SMG_createCamera = _libraries['./libNeocortex.so'].SMG_createCamera
SMG_createCamera.restype = c_int
# SMG_createCamera()
SMG_createCamera.argtypes = []
# ./Neocortex_API.h 39
SMG_destroyCamera = _libraries['./libNeocortex.so'].SMG_destroyCamera
SMG_destroyCamera.restype = c_int
# SMG_destroyCamera(camera_id)
SMG_destroyCamera.argtypes = [c_int]
# ./Neocortex_API.h 40
SMG_setCameraPosition = _libraries['./libNeocortex.so'].SMG_setCameraPosition
SMG_setCameraPosition.restype = c_int
# SMG_setCameraPosition(camera_id, x, y, z)
SMG_setCameraPosition.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 41
SMG_setCameraRotation = _libraries['./libNeocortex.so'].SMG_setCameraRotation
SMG_setCameraRotation.restype = c_int
# SMG_setCameraRotation(camera_id, x, y, z)
SMG_setCameraRotation.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 42
SMG_setCameraRotationDegrees = _libraries['./libNeocortex.so'].SMG_setCameraRotationDegrees
SMG_setCameraRotationDegrees.restype = c_int
# SMG_setCameraRotationDegrees(camera_id, x, y, z)
SMG_setCameraRotationDegrees.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 43
SMG_setCameraPositionDelta = _libraries['./libNeocortex.so'].SMG_setCameraPositionDelta
SMG_setCameraPositionDelta.restype = c_int
# SMG_setCameraPositionDelta(camera_id, x, y, z)
SMG_setCameraPositionDelta.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 44
SMG_setActiveCamera = _libraries['./libNeocortex.so'].SMG_setActiveCamera
SMG_setActiveCamera.restype = c_int
# SMG_setActiveCamera(camera_id)
SMG_setActiveCamera.argtypes = [c_int]
# ./Neocortex_API.h 45
SMG_setCameraMode = _libraries['./libNeocortex.so'].SMG_setCameraMode
SMG_setCameraMode.restype = c_int
# SMG_setCameraMode(camera_id, mode)
SMG_setCameraMode.argtypes = [c_int, c_int]
# ./Neocortex_API.h 51
OBJ_attachMesh = _libraries['./libNeocortex.so'].OBJ_attachMesh
OBJ_attachMesh.restype = c_int
# OBJ_attachMesh(object_id, mesh_id)
OBJ_attachMesh.argtypes = [c_int, c_int]
# ./Neocortex_API.h 52
OBJ_deleteMesh = _libraries['./libNeocortex.so'].OBJ_deleteMesh
OBJ_deleteMesh.restype = c_int
# OBJ_deleteMesh(object_id)
OBJ_deleteMesh.argtypes = [c_int]
# ./Neocortex_API.h 53
OBJ_attachMaterial = _libraries['./libNeocortex.so'].OBJ_attachMaterial
OBJ_attachMaterial.restype = c_int
# OBJ_attachMaterial(object_id, name, submesh)
OBJ_attachMaterial.argtypes = [c_int, STRING, c_int]
# ./Neocortex_API.h 54
OBJ_deleteMaterial = _libraries['./libNeocortex.so'].OBJ_deleteMaterial
OBJ_deleteMaterial.restype = c_int
# OBJ_deleteMaterial(object_id, submesh)
OBJ_deleteMaterial.argtypes = [c_int, c_int]
# ./Neocortex_API.h 56
OBJ_setPosition = _libraries['./libNeocortex.so'].OBJ_setPosition
OBJ_setPosition.restype = c_int
# OBJ_setPosition(object_id, x, y, z)
OBJ_setPosition.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 57
OBJ_setRotation = _libraries['./libNeocortex.so'].OBJ_setRotation
OBJ_setRotation.restype = c_int
# OBJ_setRotation(object_id, x, y, z)
OBJ_setRotation.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 58
OBJ_setRotationDegrees = _libraries['./libNeocortex.so'].OBJ_setRotationDegrees
OBJ_setRotationDegrees.restype = c_int
# OBJ_setRotationDegrees(object_id, x, y, z)
OBJ_setRotationDegrees.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 59
OBJ_setScale = _libraries['./libNeocortex.so'].OBJ_setScale
OBJ_setScale.restype = c_int
# OBJ_setScale(object_id, x, y, z)
OBJ_setScale.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 61
OBJ_setMeshLocalPosition = _libraries['./libNeocortex.so'].OBJ_setMeshLocalPosition
OBJ_setMeshLocalPosition.restype = c_int
# OBJ_setMeshLocalPosition(object_id, x, y, z)
OBJ_setMeshLocalPosition.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 62
OBJ_setMeshLocalRotation = _libraries['./libNeocortex.so'].OBJ_setMeshLocalRotation
OBJ_setMeshLocalRotation.restype = c_int
# OBJ_setMeshLocalRotation(object_id, x, y, z)
OBJ_setMeshLocalRotation.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 63
OBJ_setMeshLocalRotationDegrees = _libraries['./libNeocortex.so'].OBJ_setMeshLocalRotationDegrees
OBJ_setMeshLocalRotationDegrees.restype = c_int
# OBJ_setMeshLocalRotationDegrees(object_id, x, y, z)
OBJ_setMeshLocalRotationDegrees.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 64
OBJ_setMeshLocalScale = _libraries['./libNeocortex.so'].OBJ_setMeshLocalScale
OBJ_setMeshLocalScale.restype = c_int
# OBJ_setMeshLocalScale(object_id, x, y, z)
OBJ_setMeshLocalScale.argtypes = [c_int, c_float, c_float, c_float]
# ./Neocortex_API.h 66
OBJ_setDrawmode = _libraries['./libNeocortex.so'].OBJ_setDrawmode
OBJ_setDrawmode.restype = c_int
# OBJ_setDrawmode(object_id, mode)
OBJ_setDrawmode.argtypes = [c_int, c_uint]
# ./Neocortex_API.h 72
RES_createResource = _libraries['./libNeocortex.so'].RES_createResource
RES_createResource.restype = c_int
# RES_createResource(resource_type, filename)
RES_createResource.argtypes = [c_int, STRING]
# ./Neocortex_API.h 73
RES_deleteResource = _libraries['./libNeocortex.so'].RES_deleteResource
RES_deleteResource.restype = c_int
# RES_deleteResource(resource_id)
RES_deleteResource.argtypes = [c_int]
__NC_FLOAT_PRIMTYPE = c_float
__NC_FIXED_PRIMTYPE = c_uint
VERTEX = __NC_FLOAT_PRIMTYPE
NORMAL = __NC_FLOAT_PRIMTYPE
TEXCOORD = __NC_FLOAT_PRIMTYPE
COLOR = __NC_FLOAT_PRIMTYPE
INDEX = __NC_FIXED_PRIMTYPE

# values for enumeration 'NC_DATATYPE'
NC_DATATYPE = c_int # enum
__all__ = ['OBJ_setScale', 'INDEX', 'NORMAL', 'SMG_setVerbosity',
           'VERTEX', 'NC_DATATYPE', 'OBJ_deleteMesh',
           'SMG_getSystemtime', 'NC_UINT32', 'NC_UINT16',
           'OBJ_attachMesh', 'SMG_setCameraPositionDelta',
           'SMG_setCameraMode', 'COLOR', 'SMG_setCameraRotation',
           'TEXCOORD', 'SMG_createCamera', 'SMG_destroyObject',
           'SMG_createDisplay', 'SMG_setCameraRotationDegrees',
           'SMG_renderFrame', 'SMG_createObject', 'SMG_destroyCamera',
           'OBJ_setRotationDegrees', 'OBJ_setMeshLocalPosition',
           'OBJ_setMeshLocalScale', 'OBJ_setRotation',
           'OBJ_attachMaterial', 'OBJ_setPosition', 'OBJ_setDrawmode',
           'RES_createResource', '__NC_FIXED_PRIMTYPE',
           'OBJ_deleteMaterial', 'SMG_setCameraPosition',
           'SMG_destroy', 'SMG_init', 'SMG_swapFrame',
           'OBJ_setMeshLocalRotationDegrees', 'NC_FLOAT16',
           '__NC_FLOAT_PRIMTYPE', 'OBJ_setMeshLocalRotation',
           'RES_deleteResource', 'SMG_setActiveCamera', 'NC_FLOAT32',
           'SMG_destroyDisplay', 'SMG_renderFrameAndSwap']
